name:                terra-glide
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/terra-glide#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perlin
  other-modules:       Perlin.Algorithm
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , JuicyPixels
                     , linear
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable terra-glide-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-types
                     , scotty
                     , terra-glide
                     , text
  default-language:    Haskell2010

test-suite terra-glide-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PerlinProps
  build-depends:       base
                     , HUnit
                     , HUnit-approx
                     , terra-glide
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psandahl/terra-glide
